# PyPhoenix5

./: .gitignore  CMakeLists.txt  ErrorCode.txt  ProcessErrorCodes.py  PyPhoenix5.cpp  README.md  makestubs.sh  run.sh  run_test_motor.sh  test.py  test.sh  test_motor.cpp
stubs/PyPhoenix5/: ErrorCode.pyi  __init__.pyi
